--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: goserver
-        image: fkmatsuda/server:0.0.9
+        image: fkmatsuda/server:0.0.10
         startupProbe:
           httpGet:
             path: /healthz
@@ -37,7 +37,7 @@ spec:
           failureThreshold: 1
           timeoutSeconds: 1
           successThreshold: 1
-          initialDelaySeconds: 10
+          initialDelaySeconds: 30
         envFrom:
         - configMapRef:
             name: server-env
@@ -46,10 +46,25 @@ spec:
             memory: "32Mi"
             cpu: "10m"
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: "32Mi"
+            cpu: "100m"
         ports:
           - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: goserver-svc
+  labels:
+    app: goserver
+spec:
+  selector:
+    app: goserver
+  type: ClusterIP
+  ports:
+  - name: goserver-http
+    port: 80
+    protocol: TCP
 ---
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
